Fix Inter font not showing

--- a/docs/fonts.css
+++ b/docs/fonts.css
@@ -85,8 +85,8 @@
 /* Inter Font for Styleguide */
 @font-face {
   font-family: "Inter";
-  src: url("assets/fonts/Inter-Regular.ttf") format("ttf"),
-    url("assets/fonts/Inter-Regular.woff") format("woff");
+  src: url("dist/fonts/Inter-Regular.ttf") format("ttf"),
+    url("dist/fonts/Inter-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -94,8 +94,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("assets/fonts/Inter-Light.ttf") format("ttf"),
-    url("assets/fonts/Inter-Light.woff") format("woff");
+  src: url("dist/fonts/Inter-Light.ttf") format("ttf"),
+    url("dist/fonts/Inter-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -103,8 +103,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("assets/fonts/Inter-Medium.ttf") format("ttf"),
-    url("assets/fonts/Inter-Medium.woff") format("woff");
+  src: url("dist/fonts/Inter-Medium.ttf") format("ttf"),
+    url("dist/fonts/Inter-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -112,8 +112,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("assets/fonts/Inter-SemiBold.ttf") format("ttf"),
-    url("assets/fonts/Inter-SemiBold.woff") format("woff");
+  src: url("dist/fonts/Inter-SemiBold.ttf") format("ttf"),
+    url("dist/fonts/Inter-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -121,8 +121,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("assets/fonts/Inter-Bold.ttf") format("ttf"),
-    url("assets/fonts/Inter-Bold.woff") format("woff");
+  src: url("dist/fonts/Inter-Bold.ttf") format("ttf"),
+    url("dist/fonts/Inter-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
